user_guides/mult-cluster-standalone/nodeport/openshift-4-11/ocp-route/cafeone/secure/route-mocha-edge.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    virtual-server.f5.com/multiClusterServices: '[{"clusterName": "openshift-4-13", "svcName":
          "mocha-svc", "namespace": "cafeone", "port": 8080 }]'
    # you can define either service port or target port in the port value
  labels:
    f5type: systest
  name: cafe-mocha-edge
  namespace: cafeone
spec:
  host: cafeone.example.com
  path: "/mocha"
  tls:
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIDDjCCAfYCCQCkcGa98TFEFDANBgkqhkiG9w0BAQsFADBCMQswCQYDVQQGEwJV
[...]
      iEF3P2wDUyY0aCRioQHla2Bd
      -----END CERTIFICATE-----      
      key: |
      -----BEGIN RSA PRIVATE KEY-----
      MIIEowIBAAKCAQEA1qSoNjXGkGQ8qNo8ijWnVKol8o7JrX+2DEChQEboYb9o5CQc
[...]
      GbfVHo2UE47+tu8NOWeob2+VyjuNybbrP6+tP4Zd8qCepZbP1GPk
      -----END RSA PRIVATE KEY-----
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  port:
    targetPort: 8080
  to:
    kind: Service
    name: mocha-svc
